k3s-public-sanitized/client-web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sn-client-web
  labels:
    app: sn-client-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sn-client-web
  template:
    metadata:
      labels:
        app: sn-client-web
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: sn-client-web
        image: CHANGE_ME
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        # livenessProbe:
        #   httpGet:
        #     path: /actuator/health
        #     port: 48080
        #   initialDelaySeconds: 30
        #   periodSeconds: 10
        # readinessProbe:
        #   httpGet:
        #     path: /actuator/health
        #     port: 48080
        #   initialDelaySeconds: 5
        #   periodSeconds: 5
